; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_myfatfs.c_myfatfs_stat.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_myfatfs.c_myfatfs_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vfs_stat = type { i32 }

@FR_OK = common dso_local global i32 0, align 4
@last_result = common dso_local global i32 0, align 4
@VFS_RES_OK = common dso_local global i32 0, align 4
@VFS_RES_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.vfs_stat*)* @myfatfs_stat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @myfatfs_stat(i8* %0, %struct.vfs_stat* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.vfs_stat*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.vfs_stat* %1, %struct.vfs_stat** %5, align 8
  %7 = load i32, i32* @FR_OK, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @f_stat(i8* %8, i32* %6)
  store i32 %9, i32* @last_result, align 4
  %10 = icmp eq i32 %7, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.vfs_stat*, %struct.vfs_stat** %5, align 8
  %13 = call i32 @myfatfs_fill_stat(i32* %6, %struct.vfs_stat* %12)
  %14 = load i32, i32* @VFS_RES_OK, align 4
  store i32 %14, i32* %3, align 4
  br label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @VFS_RES_ERR, align 4
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %15, %11
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @f_stat(i8*, i32*) #1

declare dso_local i32 @myfatfs_fill_stat(i32*, %struct.vfs_stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
